finilizing the gui and making a complete test to all the functionality